# algds2024

./: .gitignore  CMakeLists.txt  README.md  lab1var13.c  main.c
lab1/: .gitignore  .gitkeep  1  1.c  5030102.IskandarovaY.lab1  CMakeCache.txt  CMakeLIsts.txt  CMakeLists.txt  Defenitions.c  FieldRoutesCalculate.c  FieldRoutesCalculate.h  Header.h  Khayaynen_13var.c  Lab 1.c  Lab1.c  Lab1.h  Laba1.c  Makefile  Method.h  Program1DmitrienkoYana.txt  Project1.sln  README  README.md  README.md.txt  Source.c  Source.cpp  Source.h  Test 1 alg.sln  Test.cpp  Testscpp.cpp  Yunakovskiy_alg1.c  findLCS.h  find_max_incresing_subsequence.h  framework.c  framework.h  func.c  func.h  funcs.c  funcs.h  functions.c  (+53 more)
lab1/5030102_20001_smaeva_1/: README.md  massiv_best_priority.c  massiv_best_priority_func.c  massiv_best_priority_func.h  test_massiv_func.c
lab1/ALG 1.6/: CountingTheWays.c  CountingTheWays.h
lab1/DataDesign1/: DataDesign1.sln  DataDesign1.vcxproj  DataDesign1.vcxproj.filters  Source.c
lab1/DataDesign1/Debug/: Sample-Test1.ilk
lab1/DataDesign1/x64/Debug/: DataDesign1.exe.recipe  DataDesign1.vcxproj.FileListAbsolute.txt  Sample-Test1.exe.gta.testdurations  vc143.idb
lab1/DataDesign1/x64/Debug/DataDesign1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DataDesign1.lastbuildstate
lab1/HelloTestSuite2/: HelloTestSuite2.c  HelpFunc.c  HelpFunc.h  TestName.txt
lab1/Lab1/: .gitignore  Lab1.sln
lab1/Lab1/Algorithm/: Algorithm.vcxproj  Algorithm.vcxproj.filters  main.c  main.h
lab1/Lab1/Lab1/: CMakeLists.txt  FuncsLib.cpp  Header.h  Lab1.c  Lab1.vcxproj  Lab1.vcxproj.filters  README.md  UnitTesting.cpp  main.cpp  test.cpp
lab1/Project1/: Function.c  Header.h  Project1.vcxproj  Project1.vcxproj.filters  Source.c  funcs.cpp  funcs.h  main.cpp
lab1/Sample-Test1/: Sample-Test1.vcxproj  test.cpp
lab1/Sample-Test1/Debug/: Sample-Test1.exe.recipe  Sample-Test1.vcxproj.FileListAbsolute.txt
lab1/Sample-Test1/Debug/Sample-Test1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Sample-Test1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab1/Sample-Test1/x64/Debug/: Sample-Test1.exe.recipe  Sample-Test1.vcxproj.FileListAbsolute.txt
lab1/Sample-Test1/x64/Debug/Sample-Test1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab1/Test 1 alg/: test.cpp
lab1/Test1/: test.cpp
lab1/[5030102_20001]_Egorkin_lab1/Sourse/: Func.c  Header.h  Sourse.c
lab1/[5030102_20001]_Egorkin_lab1/Test/: test.cpp
lab1/binaries/: CMakeCache.txt
lab1/doublerTest2/: TestName2.txt  TestName3.txt  TestName5.txt  test.cpp
lab1/first_lab/: first_lab.sln  first_lab.vcxproj  input.txt  main.c
lab1/first_lab/x64/Debug/: first_lab.exe.recipe  first_lab.ilk  first_lab.vcxproj.FileListAbsolute.txt  vc143.idb
lab1/first_lab/x64/Debug/first_lab.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  first_lab.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab1/helloTest/: dyn_prog.cpp  dyn_prog.h  helloTest.cpp  helloTest.vcxproj  helloTest.vcxproj.filters
lab1/helloTest/x64/Debug/: helloTest.exe.recipe  helloTest.ilk  vc143.idb
lab1/helloTest/x64/Debug/helloTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  helloTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab1/include/: main.h  maxCost.h
lab1/lab1Test/Project1/: Source.c  lab1.h  variant6.c
lab1/lab1Test/lab1Test/: test.cpp
lab1/lab_1_test_1/: lab_1_test_1.sln  lab_1_test_1.vcxproj  test.cpp
lab1/lab_1_test_1/x64/Debug/: lab_1_test_1.exe.recipe  lab_1_test_1.vcxproj.FileListAbsolute.txt
lab1/lab_1_test_1/x64/Debug/lab_1_test_1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  (+4 more)
lab1/labka1/: .gitignore  array_funcs.cpp  functions.cpp  header.h  labka1.sln  labka1.vcxproj  labka1.vcxproj.filters  main.cpp  readtxt.cpp  unit_tests.cpp
lab1/labka1/x64/Debug/: labka1.exe.recipe  labka1.ilk  labka1.vcxproj.FileListAbsolute.txt  vc143.idb
lab1/main1/: main1.sln  main1.vcxproj
lab1/popitka2/: FileName.c  FileName.h  Test.cpp  popitka2.sln  popitka2.vcxproj  popitka2.vcxproj.filters
lab1/popitka2/Debug/: vc143.idb
lab1/popitka2/Debug/popitka2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  popitka2.lastbuildstate
lab1/popitka2/gtest_x64-windows/: CONTROL
lab1/popitka2/gtest_x64-windows/lib/: gmock.lib  gtest.lib
lab1/popitka2/x64/Debug/: popitka2.exe.recipe  popitka2.ilk  popitka2.vcxproj.FileListAbsolute.txt  vc143.idb
lab1/source/: dynamic_count.c  dynamic_count.h  func.c  func.h  main.c  trivial.c  trivial.h
lab1/source/gtest/: CMakeLists.txt
lab1/source/tests/: dynamic_count_tests.c  dynamic_count_tests.h  trivial.c  trivial.h
lab1/source/tests/cutest/: dynamic_count_test.c
lab1/source/tests/gtest/: CMakeLists.txt  dynamic_count_test.cpp
lab1/src/: Lab1_lcs.c  Lab1_lcs.h  lcs_main.cpp  main.c  maxCost.c
lab1/test/: CMakeLists.txt  main.cpp  test.c  test.cpp
lab1/testlab1/: .gitignore  README.md  testlab1.sln
lab1/testlab1/lab1/: lab1.vcxproj  main.c  main.h
lab1/testlab1/testlab1/: test.cpp  testlab1.vcxproj
lab1/tests/: CMakeLists.txt  func_test.cpp  test.cpp  test1.txt  test2.txt  test3.txt
lab1/tests_folder/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
lab2/: CMakeLists copy.txt  CMakeLists.txt  RB_tree.c  RB_tree.h  RB_tree_Rotate.c  README.MD  avl.c  avl.h  deleteRBTree.c  insertRBTree.c  lab2.c  lab2.h  main.c  main.cpp  test1.cpp  test2.cpp  test_RB_tree.cpp  treap.h
(+26 files in other folders)
